--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
         sudo apt-get install $(./dist/tools/travis-scripts/get-pkg-list.py)
     - git config --global user.email "travis@example.com"
     - git config --global user.name "Travis CI"
+    - test "$TRAVIS_BRANCH" = "master" || git fetch origin $TRAVIS_BRANCH:$TRAVIS_BRANCH
 
 script:
     - ./dist/tools/travis-scripts/build_and_test.sh
