--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ _sketches.cpp
 Makefile.local
 
 # downloaded package sources
+pkg/ccn-lite/ccn-lite
 pkg/cmsis-dsp/cmsis-dsp
 pkg/libcoap/libcoap
 pkg/libfixmath/libfixmath
