gitignore: Add YouCompleteMe

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ pkg/wakaama/wakaama
 
 # clang-complete command line argument lists (Vim: clang-complete, Atom: linter-clang, autocomplete-clang addons)
 .clang_complete
+# YouCompleteMe (https://github.com/Valloric/YouCompleteMe)
+.ycm_extra_conf.py
+.ycm_extra_conf.pyc
