--- a/Makefile.buildtests
+++ b/Makefile.buildtests
@@ -60,6 +60,7 @@ buildtest:
 					RIOT_VERSION=$${RIOT_VERSION} \
 					WERROR=$${WERROR} \
 					LTO=$${LTO} \
+					TOOLCHAIN=$${TOOLCHAIN} \
 					$(MAKE) -j$(NPROC) 2>&1) ; \
 			if [ "$${?}" = "0" ]; then \
 				${COLOR_ECHO} "${COLOR_GREEN}success${COLOR_RESET}"; \
