drivers/dht: optimized DHT driver
- added default dht_params.h file
- added dht_auto_init(void) function
- changed init function to init(dev, params)
- s/gpio/pin/ in device descriptor
- moved FEATURE_REQUIRED to drivers/Makefile.dep

--- a/drivers/Makefile.dep
+++ b/drivers/Makefile.dep
@@ -22,6 +22,7 @@ endif
 
 ifneq (,$(filter dht,$(USEMODULE)))
     USEMODULE += xtimer
+    FEATURES_REQUIRED = periph_gpio
 endif
 
 ifneq (,$(filter enc28j60,$(USEMODULE)))
