travis: adapt for unittest change

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 
 install:
     - sudo apt-get -y install $(./dist/tools/travis-scripts/get-pkg-list.py)
+    - sudo pip install pexpect  # current version in Ubuntu repos is errorneous
     - git config --global user.email "travis@example.com"
     - git config --global user.name "Travis CI"
     - test "$TRAVIS_BRANCH" = "master" || git fetch origin $TRAVIS_BRANCH:$TRAVIS_BRANCH
