--- a/boards/remote/Makefile.include
+++ b/boards/remote/Makefile.include
@@ -35,5 +35,5 @@ export OBJDUMPFLAGS += --disassemble --source --disassembler-options=force-thumb
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
 
-# include cortex defaults
-include $(RIOTBOARD)/Makefile.include.cortexm_common
+# export board specific includes to the global includes-listing
+export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
