--- a/boards/iotlab-m3/Makefile.include
+++ b/boards/iotlab-m3/Makefile.include
@@ -16,5 +16,5 @@ include $(RIOTBOARD)/Makefile.include.openocd
 # include board dependencies
 include $(RIOTBOARD)/$(BOARD)/Makefile.dep
 
-# include cortex defaults
-include $(RIOTBOARD)/Makefile.include.cortexm_common
+# export board specific includes to the global includes-listing
+export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
