--- a/boards/mulle/Makefile.include
+++ b/boards/mulle/Makefile.include
@@ -115,5 +115,5 @@ include $(RIOTBOARD)/Makefile.include.serial
 # include board dependencies
 include $(RIOTBOARD)/$(BOARD)/Makefile.dep
 
-# include cortex defaults
-include $(RIOTBOARD)/Makefile.include.cortexm_common
+# export board specific includes to the global includes-listing
+export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
