--- a/boards/openmote-cc2538/Makefile.include
+++ b/boards/openmote-cc2538/Makefile.include
@@ -21,5 +21,5 @@ export RESET_FLAGS = $(BINDIR)
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
 
-# include cortex defaults
-include $(RIOTBOARD)/Makefile.include.cortexm_common
+# export board specific includes to the global includes-listing
+export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
