--- a/boards/slwstk6220a/Makefile.include
+++ b/boards/slwstk6220a/Makefile.include
@@ -16,5 +16,5 @@ include $(RIOTBOARD)/Makefile.include.jlink
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
 
-# include cortex defaults
-include $(RIOTBOARD)/Makefile.include.cortexm_common
+# export board specific includes to the global includes-listing
+export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
