--- a/tests/pkg_micro-ecc/Makefile
+++ b/tests/pkg_micro-ecc/Makefile
@@ -1,7 +1,7 @@
 APPLICATION = micro-ecc
 include ../Makefile.tests_common
 
-FEATURES_REQUIRED = periph_random
+FEATURES_REQUIRED = periph_hwrng
 USEPKG += micro-ecc
 
 include $(RIOTBASE)/Makefile.include
