--- a/boards/msbiot/Makefile.features
+++ b/boards/msbiot/Makefile.features
@@ -2,9 +2,9 @@
 FEATURES_PROVIDED += periph_adc
 FEATURES_PROVIDED += periph_dac
 FEATURES_PROVIDED += periph_gpio
+FEATURES_PROVIDED += periph_hwrng
 FEATURES_PROVIDED += periph_i2c
 FEATURES_PROVIDED += periph_pwm
-FEATURES_PROVIDED += periph_random
 FEATURES_PROVIDED += periph_spi
 FEATURES_PROVIDED += periph_timer
 FEATURES_PROVIDED += periph_uart
