--- a/boards/remote/Makefile.features
+++ b/boards/remote/Makefile.features
@@ -1,7 +1,7 @@
 # Put defined MCU peripherals here (in alphabetical order)
 FEATURES_PROVIDED += periph_cpuid
 FEATURES_PROVIDED += periph_gpio
-FEATURES_PROVIDED += periph_random
+FEATURES_PROVIDED += periph_hwrng
 FEATURES_PROVIDED += periph_timer
 FEATURES_PROVIDED += periph_uart
 
