--- a/cpu/nrf51/Makefile
+++ b/cpu/nrf51/Makefile
@@ -2,7 +2,7 @@
 MODULE = cpu
 
 # add a list of subdirectories, that should also be build
-DIRS = periph $(RIOTCPU)/cortexm_common
+DIRS = periph $(RIOTCPU)/cortexm_common $(RIOTCPU)/nrf5x_common
 
 # build one of the radio drivers, if enabled
 ifneq (,$(filter radio_nrfmin,$(USEMODULE)))
