--- a/cpu/nrf52/Makefile
+++ b/cpu/nrf52/Makefile
@@ -2,6 +2,6 @@
 MODULE = cpu
 
 # add a list of subdirectories, that should also be build
-DIRS = periph $(RIOTCPU)/cortexm_common
+DIRS = periph $(RIOTCPU)/cortexm_common $(RIOTCPU)/nrf5x_common
 
 include $(RIOTBASE)/Makefile.base
