--- a/cpu/Makefile.include.cortexm_common
+++ b/cpu/Makefile.include.cortexm_common
@@ -41,10 +41,10 @@ export CFLAGS_OPT  ?= -Os
 
 export CFLAGS += $(CFLAGS_CPU) $(CFLAGS_LINK) $(CFLAGS_DBG) $(CFLAGS_OPT)
 
-export ASFLAGS += $(CFLAGS_CPU) $(CFLAGS_DEBUG)
+export ASFLAGS += $(CFLAGS_CPU) $(CFLAGS_DBG)
 export LINKFLAGS += -L$(RIOTCPU)/$(CPU)/ldscripts -L$(RIOTCPU)/cortexm_common/ldscripts
 export LINKFLAGS += -T$(RIOTCPU)/$(CPU)/ldscripts/$(CPU_MODEL).ld -Wl,--fatal-warnings
-export LINKFLAGS += $(CFLAGS_DEBUG) $(CFLAGS_CPU) -static -lgcc -nostartfiles
+export LINKFLAGS += $(CFLAGS_DBG) $(CFLAGS_CPU) -static -lgcc -nostartfiles
 export LINKFLAGS += -Wl,--gc-sections
 
 # This CPU implementation is using the new core/CPU interface:
