--- a/cpu/saml21/Makefile
+++ b/cpu/saml21/Makefile
@@ -2,6 +2,6 @@
 MODULE = cpu
 
 # add a list of subdirectories, that should also be build
-DIRS = periph $(RIOTCPU)/cortexm_common
+DIRS = periph $(RIOTCPU)/cortexm_common $(RIOTCPU)/sam21_common
 
 include $(RIOTBASE)/Makefile.base
