--- a/cpu/stm32f0/Makefile.include
+++ b/cpu/stm32f0/Makefile.include
@@ -1,6 +1,5 @@
 export CPU_ARCH = cortex-m0
+export CPU_FAM  = stm32f0
 
-# use common periph functions
-USEMODULE += periph_common
-
+include $(RIOTCPU)/stm32_common/Makefile.include
 include $(RIOTCPU)/Makefile.include.cortexm_common
