--- a/cpu/nrf5x_common/Makefile.include
+++ b/cpu/nrf5x_common/Makefile.include
@@ -2,5 +2,11 @@
 FAM = $(shell echo $(CPU_FAM) | tr 'a-z-' 'A-Z_')
 export CFLAGS += -DCPU_FAM_$(FAM)
 
+# use common periph functions
+USEMODULE += periph_common
+
+# include nrf5x common periph drivers
+USEMODULE += nrf5x_common_periph
+
 # export the common include directory
 export INCLUDES += -I$(RIOTCPU)/nrf5x_common/include
