--- a/cpu/kinetis_common/Makefile.include
+++ b/cpu/kinetis_common/Makefile.include
@@ -7,6 +7,9 @@ export LINKFLAGS += -L$(RIOTCPU)/kinetis_common/ldscripts
 # add the CPU specific code for the linker
 export UNDEF += $(BINDIR)kinetis_common/fcfield.o
 
+# include kinetis common periph drivers
+export USEMODULE += kinetis_common_periph
+
 # Define a recipe to build the watchdog disable binary, used when flashing
 $(RIOTCPU)/kinetis_common/dist/wdog-disable.bin: $(RIOTCPU)/kinetis_common/dist/wdog-disable.s
 	$(AD)$(MAKE) -C $(RIOTCPU)/kinetis_common/dist/ $(notdir $@)
