cpu/stm32_common: Use a different module name to prevent linker races in Travis

--- a/cpu/stm32_common/Makefile.include
+++ b/cpu/stm32_common/Makefile.include
@@ -2,8 +2,11 @@
 FAM = $(shell echo $(CPU_FAM) | tr 'a-z-' 'A-Z_')
 export CFLAGS += -DCPU_FAM_$(FAM)
 
-# includ common periph module
+# include common periph module
 USEMODULE += periph_common
+
+# include stm32 common periph drivers
+USEMODULE += stm32_common_periph
 
 # export the common include directory
 export INCLUDES += -I$(RIOTCPU)/stm32_common/include
