uncrustify: align variable declarations and assignments

--- a/uncrustify-riot.cfg
+++ b/uncrustify-riot.cfg
@@ -64,5 +64,10 @@ sp_inside_sparen    = remove    # remove spaces inside parens for if, while and 
 align_with_tabs     = FALSE     # use tabs to align
 align_on_tabstop    = TRUE      # align on tabstops
 align_enum_equ_span = 4         # '=' in enum definition
+align_var_def_span = 1          # align variable definitions
+align_var_def_star_style = 2    # dangling star in variable definition
+align_var_def_amp_style = 2     # dangling amp in variable definition
+align_assign_span = 2           # align assignments
+align_enum_equ_span = 1         # align assignments in enums
 align_struct_init_span  = 0     # align stuff in a structure init '= { }'
 align_right_cmt_span    = 3
