--- a/uncrustify-riot.cfg
+++ b/uncrustify-riot.cfg
@@ -45,7 +45,6 @@ sp_assign           = add
 sp_arith            = add
 sp_bool             = add
 sp_compare          = add
-sp_assign           = add
 sp_after_comma      = add
 sp_func_def_paren   = remove    # "int foo (){" vs "int foo(){"
 sp_func_call_paren  = remove    # "foo (" vs "foo("
@@ -53,6 +52,7 @@ sp_func_proto_paren = remove    # "int foo ();" vs "int foo();"
 sp_else_brace       = add       # ignore/add/remove/force
 sp_before_ptr_star  = add       # ignore/add/remove/force
 sp_after_ptr_star   = remove    # ignore/add/remove/force
+sp_after_cast       = remove    # remove spaces after cast
 sp_between_ptr_star = remove    # ignore/add/remove/force
 sp_inside_paren     = remove    # remove spaces inside parens
 sp_paren_paren      = remove    # remove spaces between nested parens
@@ -65,5 +65,10 @@ sp_inside_sparen    = remove    # remove spaces inside parens for if, while and 
 align_with_tabs     = FALSE     # use tabs to align
 align_on_tabstop    = TRUE      # align on tabstops
 align_enum_equ_span = 4         # '=' in enum definition
+align_var_def_span = 1          # align variable definitions
+align_var_def_star_style = 2    # dangling star in variable definition
+align_var_def_amp_style = 2     # dangling amp in variable definition
+align_assign_span = 2           # align assignments
+align_enum_equ_span = 1         # align assignments in enums
 align_struct_init_span  = 0     # align stuff in a structure init '= { }'
 align_right_cmt_span    = 3
