fixup! uncrustify: align

--- a/uncrustify-riot.cfg
+++ b/uncrustify-riot.cfg
@@ -68,7 +68,12 @@ align_enum_equ_span = 4         # '=' in enum definition
 align_var_def_span = 1          # align variable definitions
 align_var_def_star_style = 2    # dangling star in variable definition
 align_var_def_amp_style = 2     # dangling amp in variable definition
-align_assign_span = 2           # align assignments
+align_assign_span = 1           # align assignments
 align_enum_equ_span = 1         # align assignments in enums
+align_typedef_span = 1          # align typedefs
+align_typedef_func = 2          # align function typedefs name with other names
+align_typedef_star_style = 2    # align star in typesdefs
+align_typedef_amp_style = 2     # align amp in typesdefs
+align_typedef_span = 1          # align typedefs
 align_struct_init_span  = 0     # align stuff in a structure init '= { }'
 align_right_cmt_span    = 3
