--- a/boards/mulle/Makefile.dep
+++ b/boards/mulle/Makefile.dep
@@ -3,6 +3,10 @@ ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
   USEMODULE += gnrc_nomac
 endif
 
+ifneq (,$(filter saul_default,$(USEMODULE)))
+  USEMODULE += lis3dh
+endif
+
 # The RTT clock drives the core clock in the default configuration
 FEATURES_REQUIRED += periph_rtt
 
