default example: reduce packet buffer size to 512b

--- a/examples/default/Makefile
+++ b/examples/default/Makefile
@@ -51,6 +51,10 @@ ifneq (,$(filter $(BOARD),$(BOARD_PROVIDES_NETIF)))
   USEMODULE += auto_init_gnrc_netif
   # the application dumps received packets to stdout
   USEMODULE += gnrc_pktdump
+
+  # We use only the lower layers of the GNRC network stack, hence, we can
+  # reduce the size of the packet buffer a bit
+  CFLAGS += -DGNRC_PKTBUF_SIZE=512
 endif
 
 FEATURES_OPTIONAL += config
