--- a/boards/samr21-xpro/Makefile.dep
+++ b/boards/samr21-xpro/Makefile.dep
@@ -3,6 +3,11 @@ ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
   USEMODULE += gnrc_nomac
 endif
 
+ifneq (,$(filter periph_hwrng,$(FEATURES_REQUIRED)))
+  USEMODULE += at86rf233
+  USEMODULE += gnrc
+endif
+
 ifneq (,$(filter saul_default,$(USEMODULE)))
   USEMODULE += saul_gpio
 endif
