make: set OBJDUMP = $(PREFIX)objdump for gnu targets.

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -35,6 +35,8 @@ export LINK                  # The command used to link the files. Must take the
 export LINKFLAGS             # Flags to supply in the linking step.
 export OBJCOPY               # The command used to create the HEXFILE.
 export OFLAGS                # The parameter for OBJCOPY, e.g. to strip the debug information.
+export OBJDUMP               # The command used to create the assembly listing.
+export OBJDUMPFLAGS          # The parameter for OBJDUMP.
 export SIZE                  # The command to read to size of the ELF sections.
 export UNDEF                 # Set by the BOARD's and CPU's Makefile.include, this contains object files with must not be used in the ELFFILE even if the if no call to the functions.
 export WERROR                # Treat all compiler warnings as errors if set to 1 (see -Werror flag in GCC manual)
