--- a/Makefile.include
+++ b/Makefile.include
@@ -316,12 +316,15 @@ reset:
 		exit 1; }
 	$(RESET) $(RESET_FLAGS)
 
+# Default OBJDUMPFLAGS for platforms which do not specify it:
+OBJDUMPFLAGS ?= -S -D -h
+
 objdump:
-	$(AD)command -v $(PREFIX)objdump >/dev/null 2>&1 || \
+	$(AD)command -v $(OBJDUMP) >/dev/null 2>&1 || \
 		{ $(COLOR_ECHO) \
-		'${COLOR_RED} Objdump program $(PREFIX)objdump not found. Aborting.${COLOR_RESET}'; \
+		'${COLOR_RED} Objdump program $(OBJDUMP) not found. Aborting.${COLOR_RESET}'; \
 		exit 1; }
-	$(PREFIX)objdump -S -D -h $(ELFFILE) | less
+	$(OBJDUMP) $(OBJDUMPFLAGS) $(ELFFILE) | less
 
 # Generate an XML file containing all macro definitions and include paths for
 # use in Eclipse CDT
