make: add gnrc_conn_udp as dependency for libcoap

--- a/Makefile.dep
+++ b/Makefile.dep
@@ -3,6 +3,7 @@ include $(RIOTBASE)/drivers/Makefile.dep
 
 ifneq (,$(filter libcoap,$(USEPKG)))
     USEMODULE += posix_sockets
+    USEMODULE += gnrc_conn_udp
 endif
 
 ifneq (,$(filter nhdp,$(USEMODULE)))
